Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95825

Live preview not starting

XMLWordPrintable

    • macOS
    • a068fdc0b2cf7d4223d9ad15345fe9d345875936 551125b333d2ee35aeea1fc40f5794716f63172b eaf011c4ae (qt/tqtc-qtdeclarative/5.15-opensource) eaf011c4ae (qt/qtdeclarative/5.15) eaf011c4ae (qt/tqtc-qtdeclarative/5.15)

      Live Preview is not starting properly on macOS, no errors in the application output and no crashlogs from mac os but after launching the new app it hangs with "Application not responding" and needs to be force quit.

      This seems to fix the issue:

      This should have the same effect, but I do not need to use mutable and change function signatures.

      I use it with QMutexLocker in load()
      void QQmlPreviewFileEngine::load() const

      { QMutexLocker locker(&m_loadMutex); m_result = m_loader->load(m_absolute); ... }

        1. livePreviewNoRun.gif
          1.19 MB
          Brook Cronin
        2. screenshot-1.png
          94 kB
          Thomas Hartmann
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            brook_cronin_qt Brook Cronin
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: