QmlPreview: Protect QQmlPreviewFileLoader::load with another mutex

We can concurrently load multiple files from different threads, but the
loader can only handle one such request at a time.

Fixes: QTBUG-95825
Pick-to: 6.2
Change-Id: I2b94d55f2cf0da6e84dabc47df5699cc57b903a6
Reviewed-by: Maximilian Goldstein <max.goldstein@qt.io>
Reviewed-by: Knud Dollereder <knud.dollereder@qt.io>